--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: node_js
 node_js:
   - "8.10"
+
+before_install:
+  - rvm install 2.2
+  - rvm use 2.2
+  - gem install hiptest-publisher
+  - hiptest-publisher -c hiptest-publisher.conf --only=tests --test-run-id=135450
+
+after_install:
+  - hiptest-publisher -c hiptest-publisher.conf --push="nosetests.xml" --test-run-id=135450
