--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "jasmine": "^3.4.0",
         "jasmine-core": "^3.4.0",
         "jasmine-expect": "^4.0.2",
+        "jasmine-xml-reporter": "^1.2.1",
         "lambda-tester": "^3.6.0"
     }
 }
