--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ before_install:
   - rvm install 2.2
   - rvm use 2.2
   - gem install hiptest-publisher
-  - hiptest-publisher -c hiptest-publisher.conf --only=tests --test-run-id=135450
+  - hiptest-publisher --config=hiptest-publisher.conf --test-run-id=135450 --without=actionwords
 
 script:
   - ./node_modules/jasmine-xml-reporter/bin/jasmine.js --junitreport
 
 after_script:
-  - hiptest-publisher -c hiptest-publisher.conf --push="results.xml" --test-run-id=135450
+  - hiptest-publisher -c hiptest-publisher.conf --push="results.xml" --push-format=junit --test-run-id=135450
